fix: photos, images and icons in interfaces looking blurry

--- a/html/browser/roundend.css
+++ b/html/browser/roundend.css
@@ -43,3 +43,8 @@ body {
 	background-color: #272727;
 	color: #efefef;
 }
+
+img {
+	-ms-interpolation-mode: nearest-neighbor;
+	image-rendering: pixelated;
+}
